--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -53,6 +53,6 @@
   }
 
   .content {
-    padding: 1rem;
+    padding: var(--content-mobile-padding-redesigned);
   }
 }
